--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,19 @@ dependencies {
     testCompile 'junit:junit:4.12'
     //路由
     annotationProcessor 'com.github.mzule.activityrouter:compiler:1.1.7'
-    compile project(':library')
-    compile project(':login')
+    if (rootProject.ext.android.isModule) {
+        compile project(':library')
+    }
+    if (!rootProject.ext.android.isModule) {
+        compile project(':guide')
+    }
+    if (!rootProject.ext.android.isModule) {
+        compile project(':login')
+    }
+    if (!rootProject.ext.android.isModule) {
+        compile project(':trade')
+    }
+    if (!rootProject.ext.android.isModule) {
+        compile project(':usercenter')
+    }
 }
